# rtk

./: .gitignore  README.md  pyproject.toml
src/rtk/: calibration.json  package.xml  report.md  setup.py
src/rtk/launch/: display.launch.py  display.rviz  inverse_kinematics.launch.py  manual_control.launch.py  object_detection.launch.py  project.launch.py
src/rtk/rtk/: inverse_kinematics.py  manual_control.py  newnode.py  object_detection.py  serial_step_bridge.py  steps_terminal_input.py  stt.py  stt_gtts.py
src/rtk/urdf/: arm.urdf
